# zinc

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  output.txt  rust-toolchain  rust-toolchain.toml  rustfmt.toml
.githooks/: pre-push
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  choose.md  feature.md
.github/workflows/: benchmarks.yml  build-and-test.yml  ci.yml  coverage-pr.yml  coverage.yml  dependency-audit.yml  docs.yml  linter.yml  semver-checks.yml  spell-check.yml  typos.toml  ub-detection.yml
benches/: brakedown_benches.rs  integer_benches.rs  prime_generation_benches.rs  random_field_benches.rs  spartan_benches.rs  spartan_prover_benches.rs  sumcheck_benches.rs  zinc_benches.rs  zip_benches.rs
examples/: simple_r1cs.rs
src/: brakedown.rs  ccs.rs  const_helpers.rs  conversion.rs  crypto_int.rs  field.rs  field_config.rs  lib.rs  linearisation.rs  linearization.rs  macros.rs  mont_config.rs  poly.rs  poly_f.rs  poly_z.rs  prime_gen.rs  primitives.rs  sparse_matrix.rs  spartan.rs  sumcheck.rs  traits.rs  transcript.rs  zinc.rs  zip.rs
src/biginteger/: arithmetic.rs  bits.rs  mod.rs  tests.rs  traits.rs
src/brakedown/: code.rs  pcs.rs  pcs_transcript.rs  utils.rs
src/brakedown/pcs/: commit.rs  open.rs  structs.rs  utils.rs  verify.rs
src/brakedown/tests/: mod.rs  pcs_tests.rs
src/ccs/: ccs_f.rs  ccs_z.rs  error.rs  test_utils.rs  utils.rs
src/crypto_int/: int.rs  mod.rs  uint.rs
src/field/: arithmetic.rs  biginteger.rs  comparison.rs  config.rs  constant.rs  conversion.rs  int.rs  mod.rs  static_config.rs  uint.rs
src/field/biginteger/: arithmetic.rs  mod.rs
src/linearisation/: errors.rs  structs.rs  utils.rs
src/linearization/: errors.rs  utils.rs
src/lookup/: grand_product.rs  grand_product_quarks.rs  memory_checking.rs  mod.rs
src/poly/: util.rs
src/poly/mle/: dense.rs  mod.rs  sparse.rs
src/poly/polynomials/: multilinear_polynomial.rs  util.rs
src/poly_f/: mle.rs  polynomials.rs
src/poly_f/mle/: dense.rs  mod.rs  sparse.rs
src/poly_f/polynomials/: dense_interleaved_polynomial.rs  eq_poly.rs  mod.rs  multilinear_polynomial.rs  split_eq_poly.rs  util.rs
src/poly_z/: mle.rs  polynomials.rs
src/poly_z/mle/: dense.rs  mod.rs  sparse.rs
src/poly_z/polynomials/: mod.rs  multilinear_polynomial.rs  util.rs
src/prime_gen/: mod.rs
src/spartan/: errors.rs  prover.rs  structs.rs  tests.rs  utils.rs  verifier.rs
src/sumcheck/: mod.rs  prover.rs  tests.rs  utils.rs  verifier.rs
src/traits/: conversion.rs  types.rs
src/zinc/: errors.rs  mod.rs  prover.rs  structs.rs  tests.rs  utils.rs  verifier.rs
src/zip/: code.rs  code_raa.rs  pcs.rs  pcs_transcript.rs  tests.rs  utils.rs
src/zip/pcs/: commit.rs  error.rs  open.rs  open_f.rs  open_z.rs  structs.rs  tests.rs  utils.rs  verify.rs  verify_f.rs  verify_z.rs
src/zip/tests/: mod.rs  pcs_tests.rs
