[package]
name = "zinc"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
criterion = "0.5.1"
crypto-bigint = "0.5.5"
displaydoc = "0.2.5"
hashbrown = "0.15.2"
i256 = {version="0.2.2", features=["i512"]}
itertools = "0.14.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"
rayon = { version = "1.10.0", optional = true }
sha3 = "0.10.8"
thiserror = "2.0.11"
zeroize = "1.8.1"


[features]
default = []
asm = ["sha3/asm"]
parallel = ["dep:rayon"]

[[bench]]
name = "random_field_benches"
harness = false

[[bench]]
name = "sumcheck_benches"
harness = false

[[bench]]
name = "zip_benches"
harness = false


