[package]
name = "zinc"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/NethermindEth/zinc/"
license = "MIT"

authors = ["Ilia Vlasov <ilia@nethermind.io>", "Matthew Klein <matthew.klein@nethermind.io>", "Isaac Villalobos <isaac@nethermind.io>", "Marko Čupić <marko.cupic@nethermind.io>"]

[dependencies]
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
bytemuck = "1.23.0"
criterion = "0.5.1"
crypto-bigint = "0.6.1"
crypto-primes = "0.6.2"
displaydoc = "0.2.5"
hashbrown = "0.15.2"
itertools = "0.14.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
rand = "0.9.1"
rayon = { version = "1.10.0", optional = true }
sha3 = "0.10.8"
blake3 = "1.8.2"
thiserror = "2.0.11"
zeroize = "1.8.1"

[lib]
bench = false

[features]
default = ["std"]
std = []
asm = ["sha3/asm"]
parallel = ["dep:rayon"]

[[bench]]
name = "random_field_benches"
harness = false

[[bench]]
name = "sumcheck_benches"
harness = false

[[bench]]
name = "spartan_benches"
harness = false

[[bench]]
name = "zip_benches"
harness = false

[[bench]]
name = "prime_generation_benches"
harness = false


