[package]
name = "zinc"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/NethermindEth/zinc/"
license = "MIT"

authors = [
    "Ilia Vlasov <ilia@nethermind.io>",
    "Matthew Klein <matthew.klein@nethermind.io>",
    "Isaac Villalobos <isaac@nethermind.io>",
    "Marko Čupić <marko.cupic@nethermind.io>",
    "Nikolaos Dimitriou <nikolaos@nethermind.io>",
    "Alexander Abdugafarov <alexander.abdugafarov@nethermind.io>",
]

[lib]
bench = false

[features]
default = ["std"]
std = []
asm = ["sha3/asm"]
parallel = ["dep:rayon", "blake3/rayon", "p3-maybe-rayon/parallel", "p3-util/parallel"]

[dependencies]
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
blake3 = "1.8.2"
bytemuck = "1.23.2"
crypto-bigint = "0.6.1"
crypto-primes = "0.6.2"
displaydoc = "0.2.5"
hashbrown = "0.15.4"
itertools = "0.14.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
rand = "0.9.2"
rayon = { version = "1.10.0", optional = true }
sha3 = "0.10.8"
thiserror = "2.0.12"
zeroize = "1.8.1"
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", rev = "5ebf8e4" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "5ebf8e4" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "5ebf8e4" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git", rev = "5ebf8e4" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", rev = "5ebf8e4" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git", rev = "5ebf8e4" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "5ebf8e4", features = [] }
transpose = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
uninit = "0.6.2"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "random_field_benches"
harness = false

[[bench]]
name = "sumcheck_benches"
harness = false

[[bench]]
name = "spartan_benches"
harness = false

[[bench]]
name = "zip_benches"
harness = false

[[bench]]
name = "prime_generation_benches"
harness = false
